src/main/java/io/mycat/server/parser/antlr/MycatParser.java
// Generated from C:\Users\Coollf\Mycat.g4 by ANTLR 4.1
package io.mycat.server.parser.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MycatParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SET=1, CLEAR=2, WHERE=3, SHOW=4, KILL=5, RELOAD=6, ROLLBACK=7, SWITCH=8, 
		STOP=9, OFFLINE=10, ONLINE=11, BEGIN=12, COMMIT=13, DELETE=14, INSERT=15, 
		REPLACE=16, SELECT=17, START=18, UPDATE=19, SAVEPOINT=20, EXPLAIN=21, 
		USE=22, CREATE=23, TRUNCATE=24, DROP=25, QUERY=26, HELP=27, CALL=28, DESC=29, 
		DESCRIBE=30, LOAD=31, DATA=32, INFILE=33, MSQL_SYS_ID=34, NAMESPACE_ID=35, 
		EQN=36, COMMA=37, DOT=38, ASTERISK=39, RPAREN=40, LPAREN=41, RBRACK=42, 
		LBRACK=43, PLUS=44, MINUS=45, NEGATION=46, VERTBAR=47, BITAND=48, POWER_OP=49, 
		ID=50, NUM=51, STRING=52, COMMENT_LINE=53, COMMENT_PIECE=54, WS=55;
	public static final String[] tokenNames = {
		"<INVALID>", "SET", "CLEAR", "WHERE", "SHOW", "KILL", "RELOAD", "ROLLBACK", 
		"SWITCH", "STOP", "OFFLINE", "ONLINE", "BEGIN", "COMMIT", "DELETE", "INSERT", 
		"REPLACE", "SELECT", "START", "UPDATE", "SAVEPOINT", "EXPLAIN", "USE", 
		"CREATE", "TRUNCATE", "DROP", "QUERY", "HELP", "CALL", "DESC", "DESCRIBE", 
		"LOAD", "DATA", "INFILE", "MSQL_SYS_ID", "NAMESPACE_ID", "'='", "','", 
		"'.'", "'*'", "')'", "'('", "']'", "'['", "'+'", "'-'", "'~'", "'|'", 
		"'&'", "'^'", "ID", "NUM", "STRING", "COMMENT_LINE", "COMMENT_PIECE", 
		"WS"
	};
	public static final int
		RULE_mycat = 0, RULE_msql = 1, RULE_sql = 2, RULE_show_msql = 3, RULE_clear_msql = 4, 
		RULE_kill_msql = 5, RULE_reload_msql = 6, RULE_rollback_msql = 7, RULE_switch_msql = 8, 
		RULE_stop_msql = 9, RULE_offline_msql = 10, RULE_online_msql = 11, RULE_show_sql = 12, 
		RULE_begin_sql = 13, RULE_commit_sql = 14, RULE_rollback_sql = 15, RULE_delete_sql = 16, 
		RULE_insert_sql = 17, RULE_replace_sql = 18, RULE_select_sql = 19, RULE_kill_sql = 20, 
		RULE_set_sql = 21, RULE_start_sql = 22, RULE_update_sql = 23, RULE_savepoint_sql = 24, 
		RULE_use_sql = 25, RULE_explain_sql = 26, RULE_ddl_sql = 27, RULE_kill_query_sql = 28, 
		RULE_help_sql = 29, RULE_call_sql = 30, RULE_describe_sql = 31, RULE_load_data_infile_sql = 32, 
		RULE_mysql_comment_sql = 33;
	public static final String[] ruleNames = {
		"mycat", "msql", "sql", "show_msql", "clear_msql", "kill_msql", "reload_msql", 
		"rollback_msql", "switch_msql", "stop_msql", "offline_msql", "online_msql", 
		"show_sql", "begin_sql", "commit_sql", "rollback_sql", "delete_sql", "insert_sql", 
		"replace_sql", "select_sql", "kill_sql", "set_sql", "start_sql", "update_sql", 
		"savepoint_sql", "use_sql", "explain_sql", "ddl_sql", "kill_query_sql", 
		"help_sql", "call_sql", "describe_sql", "load_data_infile_sql", "mysql_comment_sql"
	};

	@Override
	public String getGrammarFileName() { return "Mycat.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public MycatParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class MycatContext extends ParserRuleContext {
		public SqlContext sql() {
			return getRuleContext(SqlContext.class,0);
		}
		public MsqlContext msql() {
			return getRuleContext(MsqlContext.class,0);
		}
		public MycatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mycat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MycatListener ) ((MycatListener)listener).enterMycat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MycatListener ) ((MycatListener)listener).exitMycat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MycatVisitor ) return ((MycatVisitor<? extends T>)visitor).visitMycat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MycatContext mycat() throws RecognitionException {
		MycatContext _localctx = new MycatContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_mycat);
		try {
			setState(70);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(68); msql();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(69); sql();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MsqlContext extends ParserRuleContext {
		public Offline_msqlContext offline_msql() {
			return getRuleContext(Offline_msqlContext.class,0);
		}
		public Kill_msqlContext kill_msql() {
			return getRuleContext(Kill_msqlContext.class,0);
		}
		public Switch_msqlContext switch_msql() {
			return getRuleContext(Switch_msqlContext.class,0);
		}
		public Clear_msqlContext clear_msql() {
			return getRuleContext(Clear_msqlContext.class,0);
		}
		public Rollback_msqlContext rollback_msql() {
			return getRuleContext(Rollback_msqlContext.class,0);
		}
		public Show_msqlContext show_msql() {
			return getRuleContext(Show_msqlContext.class,0);
		}
		public Stop_msqlContext stop_msql() {
			return getRuleContext(Stop_msqlContext.class,0);
		}
		public Online_msqlContext online_msql() {
			return getRuleContext(Online_msqlContext.class,0);
		}
		public Reload_msqlContext reload_msql() {
			return getRuleContext(Reload_msqlContext.class,0);
		}
		public MsqlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_msql; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MycatListener ) ((MycatListener)listener).enterMsql(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MycatListener ) ((MycatListener)listener).exitMsql(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MycatVisitor ) return ((MycatVisitor<? extends T>)visitor).visitMsql(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MsqlContext msql() throws RecognitionException {
		MsqlContext _localctx = new MsqlContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_msql);
		try {
			setState(81);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(72); show_msql();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(73); clear_msql();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(74); kill_msql();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(75); reload_msql();
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(76); rollback_msql();
				}
				break;

			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(77); switch_msql();
				}
				break;

			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(78); stop_msql();
				}
				break;

			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(79); offline_msql();
				}
				break;

			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(80); online_msql();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SqlContext extends ParserRuleContext {
		public Replace_sqlContext replace_sql() {
			return getRuleContext(Replace_sqlContext.class,0);
		}
		public Commit_sqlContext commit_sql() {
			return getRuleContext(Commit_sqlContext.class,0);
		}
		public Show_sqlContext show_sql() {
			return getRuleContext(Show_sqlContext.class,0);
		}
		public Select_sqlContext select_sql() {
			return getRuleContext(Select_sqlContext.class,0);
		}
		public Use_sqlContext use_sql() {
			return getRuleContext(Use_sqlContext.class,0);
		}
		public Update_sqlContext update_sql() {
			return getRuleContext(Update_sqlContext.class,0);
		}
		public Describe_sqlContext describe_sql() {
			return getRuleContext(Describe_sqlContext.class,0);
		}
		public Mysql_comment_sqlContext mysql_comment_sql() {
			return getRuleContext(Mysql_comment_sqlContext.class,0);
		}
		public Kill_query_sqlContext kill_query_sql() {
			return getRuleContext(Kill_query_sqlContext.class,0);
		}
		public Ddl_sqlContext ddl_sql() {
			return getRuleContext(Ddl_sqlContext.class,0);
		}
		public Delete_sqlContext delete_sql() {
			return getRuleContext(Delete_sqlContext.class,0);
		}
		public Set_sqlContext set_sql() {
			return getRuleContext(Set_sqlContext.class,0);
		}
		public Start_sqlContext start_sql() {
			return getRuleContext(Start_sqlContext.class,0);
		}
		public Begin_sqlContext begin_sql() {
			return getRuleContext(Begin_sqlContext.class,0);
		}
		public Rollback_sqlContext rollback_sql() {
			return getRuleContext(Rollback_sqlContext.class,0);
		}
		public Load_data_infile_sqlContext load_data_infile_sql() {
			return getRuleContext(Load_data_infile_sqlContext.class,0);
		}
		public Call_sqlContext call_sql() {
			return getRuleContext(Call_sqlContext.class,0);
		}
		public Explain_sqlContext explain_sql() {
			return getRuleContext(Explain_sqlContext.class,0);
		}
		public Kill_sqlContext kill_sql() {
			return getRuleContext(Kill_sqlContext.class,0);
		}
		public Help_sqlContext help_sql() {
			return getRuleContext(Help_sqlContext.class,0);
		}
		public Savepoint_sqlContext savepoint_sql() {
			return getRuleContext(Savepoint_sqlContext.class,0);
		}
		public Insert_sqlContext insert_sql() {
			return getRuleContext(Insert_sqlContext.class,0);
		}
		public SqlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sql; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MycatListener ) ((MycatListener)listener).enterSql(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MycatListener ) ((MycatListener)listener).exitSql(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MycatVisitor ) return ((MycatVisitor<? extends T>)visitor).visitSql(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SqlContext sql() throws RecognitionException {
		SqlContext _localctx = new SqlContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sql);
		try {
			setState(105);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(83); begin_sql();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(84); commit_sql();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(85); rollback_sql();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(86); delete_sql();
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(87); insert_sql();
				}
				break;

			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(88); replace_sql();
				}
				break;

			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(89); select_sql();
				}
				break;

			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(90); set_sql();
				}
				break;

			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(91); show_sql();
				}
				break;

			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(92); start_sql();
				}
				break;

			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(93); update_sql();
				}
				break;

			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(94); kill_sql();
				}
				break;

			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(95); savepoint_sql();
				}
				break;

			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(96); use_sql();
				}
				break;

			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(97); explain_sql();
				}
				break;

			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(98); kill_query_sql();
				}
				break;

			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(99); help_sql();
				}
				break;

			case 18:
				enterOuterAlt(_localctx, 18);
				{
				setState(100); mysql_comment_sql();
				}
				break;

			case 19:
				enterOuterAlt(_localctx, 19);
				{
				setState(101); call_sql();
				}
				break;

			case 20:
				enterOuterAlt(_localctx, 20);
				{
				setState(102); describe_sql();
				}
				break;

			case 21:
				enterOuterAlt(_localctx, 21);
				{
				setState(103); load_data_infile_sql();
				}
				break;

			case 22:
				enterOuterAlt(_localctx, 22);
				{
				setState(104); ddl_sql();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Show_msqlContext extends ParserRuleContext {
		public TerminalNode EQN() { return getToken(MycatParser.EQN, 0); }
		public TerminalNode WHERE() { return getToken(MycatParser.WHERE, 0); }
		public List<TerminalNode> ID() { return getTokens(MycatParser.ID); }
		public TerminalNode MSQL_SYS_ID() { return getToken(MycatParser.MSQL_SYS_ID, 0); }
		public TerminalNode SHOW() { return getToken(MycatParser.SHOW, 0); }
		public TerminalNode ID(int i) {
			return getToken(MycatParser.ID, i);
		}
		public Show_msqlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_show_msql; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MycatListener ) ((MycatListener)listener).enterShow_msql(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MycatListener ) ((MycatListener)listener).exitShow_msql(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MycatVisitor ) return ((MycatVisitor<? extends T>)visitor).visitShow_msql(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Show_msqlContext show_msql() throws RecognitionException {
		Show_msqlContext _localctx = new Show_msqlContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_show_msql);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107); match(SHOW);
			setState(108); match(MSQL_SYS_ID);
			setState(113);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(109); match(WHERE);
				setState(110); match(ID);
				setState(111); match(EQN);
				setState(112); match(ID);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Clear_msqlContext extends ParserRuleContext {
		public TerminalNode EQN() { return getToken(MycatParser.EQN, 0); }
		public TerminalNode WHERE() { return getToken(MycatParser.WHERE, 0); }
		public List<TerminalNode> ID() { return getTokens(MycatParser.ID); }
		public TerminalNode MSQL_SYS_ID() { return getToken(MycatParser.MSQL_SYS_ID, 0); }
		public TerminalNode CLEAR() { return getToken(MycatParser.CLEAR, 0); }
		public TerminalNode NUM() { return getToken(MycatParser.NUM, 0); }
		public TerminalNode ID(int i) {
			return getToken(MycatParser.ID, i);
		}
		public Clear_msqlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clear_msql; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MycatListener ) ((MycatListener)listener).enterClear_msql(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MycatListener ) ((MycatListener)listener).exitClear_msql(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MycatVisitor ) return ((MycatVisitor<? extends T>)visitor).visitClear_msql(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Clear_msqlContext clear_msql() throws RecognitionException {
		Clear_msqlContext _localctx = new Clear_msqlContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_clear_msql);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115); match(CLEAR);
			setState(116); match(MSQL_SYS_ID);
			setState(117); match(WHERE);
			setState(118); match(ID);
			setState(119); match(EQN);
			setState(120);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==NUM) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Kill_msqlContext extends ParserRuleContext {
		public List<TerminalNode> COMMA() { return getTokens(MycatParser.COMMA); }
		public List<TerminalNode> ID() { return getTokens(MycatParser.ID); }
		public TerminalNode KILL() { return getToken(MycatParser.KILL, 0); }
		public TerminalNode MSQL_SYS_ID() { return getToken(MycatParser.MSQL_SYS_ID, 0); }
		public TerminalNode COMMA(int i) {
			return getToken(MycatParser.COMMA, i);
		}
		public TerminalNode ID(int i) {
			return getToken(MycatParser.ID, i);
		}
		public Kill_msqlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_kill_msql; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MycatListener ) ((MycatListener)listener).enterKill_msql(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MycatListener ) ((MycatListener)listener).exitKill_msql(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MycatVisitor ) return ((MycatVisitor<? extends T>)visitor).visitKill_msql(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Kill_msqlContext kill_msql() throws RecognitionException {
		Kill_msqlContext _localctx = new Kill_msqlContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_kill_msql);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(122); match(KILL);
			setState(123); match(MSQL_SYS_ID);
			setState(124); match(ID);
			setState(129);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(125); match(COMMA);
					setState(126); match(ID);
					}
					} 
				}
				setState(131);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Reload_msqlContext extends ParserRuleContext {
		public TerminalNode MSQL_SYS_ID() { return getToken(MycatParser.MSQL_SYS_ID, 0); }
		public TerminalNode RELOAD() { return getToken(MycatParser.RELOAD, 0); }
		public Reload_msqlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_reload_msql; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MycatListener ) ((MycatListener)listener).enterReload_msql(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MycatListener ) ((MycatListener)listener).exitReload_msql(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MycatVisitor ) return ((MycatVisitor<? extends T>)visitor).visitReload_msql(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Reload_msqlContext reload_msql() throws RecognitionException {
		Reload_msqlContext _localctx = new Reload_msqlContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_reload_msql);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132); match(RELOAD);
			setState(133); match(MSQL_SYS_ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Rollback_msqlContext extends ParserRuleContext {
		public TerminalNode ROLLBACK() { return getToken(MycatParser.ROLLBACK, 0); }
		public TerminalNode MSQL_SYS_ID() { return getToken(MycatParser.MSQL_SYS_ID, 0); }
		public Rollback_msqlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rollback_msql; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MycatListener ) ((MycatListener)listener).enterRollback_msql(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MycatListener ) ((MycatListener)listener).exitRollback_msql(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MycatVisitor ) return ((MycatVisitor<? extends T>)visitor).visitRollback_msql(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Rollback_msqlContext rollback_msql() throws RecognitionException {
		Rollback_msqlContext _localctx = new Rollback_msqlContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_rollback_msql);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135); match(ROLLBACK);
			setState(136); match(MSQL_SYS_ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Switch_msqlContext extends ParserRuleContext {
		public TerminalNode NAMESPACE_ID() { return getToken(MycatParser.NAMESPACE_ID, 0); }
		public TerminalNode MSQL_SYS_ID() { return getToken(MycatParser.MSQL_SYS_ID, 0); }
		public TerminalNode SWITCH() { return getToken(MycatParser.SWITCH, 0); }
		public Switch_msqlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_switch_msql; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MycatListener ) ((MycatListener)listener).enterSwitch_msql(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MycatListener ) ((MycatListener)listener).exitSwitch_msql(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MycatVisitor ) return ((MycatVisitor<? extends T>)visitor).visitSwitch_msql(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Switch_msqlContext switch_msql() throws RecognitionException {
		Switch_msqlContext _localctx = new Switch_msqlContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_switch_msql);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138); match(SWITCH);
			setState(139); match(MSQL_SYS_ID);
			setState(140); match(NAMESPACE_ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

